--- a/public/index.html
+++ b/public/index.html
@@ -106,7 +106,7 @@
 
     body {
       background: #ccc url("./images/background.jpg") no-repeat center center fixed;
-      background-size: 100% 100%;
+      background-size: 100% auto;
     }
 
     body {
