--- a/public/index.html
+++ b/public/index.html
@@ -107,6 +107,7 @@
     body {
       background: #ccc url("./images/background.jpg") no-repeat center center fixed;
       background-size: 100% auto;
+      object-fit: contain;
     }
 
     body {
